--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>hello world</title>
 </head>
 <body>
-<h1> hello world </h1>
+<h1> hello world just watch me shine and I will blind you with my light </h1>
 </body>
 </html>
