--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	<title>hello world</title>
 </head>
 <body>
-<h1> hello world just watch me shine and I will blind you with my light </h1>
+<h1> just watch me shine and I will blind you with my light. I will burn every demon and purify all humans with the light that shines brighter than anything
+ya ya ya ya ya ya </h1>
 </body>
 </html>
