--- a/module2test/index.html
+++ b/module2test/index.html
@@ -11,21 +11,25 @@ index.css">
 	<header>
 		<h1>Our Menu</h1>
 	</header>
-<main class="container">
-	<section class="rows">
+<div class="container">
 	<section class="col-md-4 col-sm-6 col-xs-12" id="section1">
+	<div class="box">
 	<h2 id="heading1"> Chicken </h2>
 	<p>Chicken is a good source protein. It tasted very good when fried or even when made chicken curry.</p>
+	</div>
 </section>
 <section class="col-md-4 col-sm-6 col-xs-12" id="section2">
+	<div class="box">
 	<h2 id="heading2"> Beef </h2>
 	<p>Beef is my favourite food. Specially I like beef steaks very much</p>
+	</div>
 </section>
 <section class="col-md-4 col-sm-12 col-xs-12" id="section3">
+	<div class="box">
 	<h2 id="heading3"> Shushi </h2>
 	<p> Shushi is a dish from Japanese cuisine. I have never really tasted it before</p>
+	</div>
 </section>
-</section>
-</main>
+</div>
 </body>
 </html>
